<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_image">Quiz image</string>
    <string name="next_text">Next Question</string>
    <string name="prev_text">Previous Question</string>
    <string name="quiz_img">Quiz img</string>
    <string name="true_txt">True</string>
    <string name="false_txt">False</string>
    <string name="correct_ans">That\'s correct</string>
    <string name="wrong_ans">That\'s incorrect</string>
    <string name="test_question">Independence day of India is August 15?</string>
    <string name="test_question1">Republic day of India is January 26?</string>
    <string name="test_question2">Indian parliament passed the Citizenship Act on 1955?</string>
    <string name="test_question3">Single citizenship in india has been taken from britan?</string>
    <string name="test_question4">Indian pio card launched in 2005?</string>
    <string name="test_question5">The two rights in declaration of independence are \n \t <strong>freedoom</strong> of religion \n \t <strong>freedoom</strong> of speech?</string>

</resources>